# Donkey_Kong

./: CMakeLists.txt  main.cpp  szablon2vs19.sln  wyniki.txt
x64/Debug/: szablon2vs17.exe.recipe  szablon2vs17.ilk  szablon2vs17.vcxproj.FileListAbsolute.txt  szablon2vs19.exe.recipe  szablon2vs19.ilk  szablon2vs19.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/szablon2vs17.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  szablon2vs17.lastbuildstate
x64/Debug/szablon2vs19.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  szablon2vs19.lastbuildstate
